# axle

./: .gitignore  README.md  pyproject.toml
axle/: main.py
axle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axle/commands/: __init__.py  db.py  generate.py  search.py  storage.py  storyboard.py  voice.py
axle/lib/: __init__.py  r2_storage.py
vidgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
